--- a/_site.yml
+++ b/_site.yml
@@ -7,5 +7,5 @@ navbar:
       href: index.html
     - text: "About Me"
       href: about.html
-    - text: "Practice"
+    - text: "Research"
       href: practice.html
