--- a/_site.yml
+++ b/_site.yml
@@ -8,4 +8,4 @@ navbar:
     - text: "About Me"
       href: about.html
     - text: "Research"
-      href: practice.html
+      href: research.html
