teaching page created

--- a/_site.yml
+++ b/_site.yml
@@ -9,8 +9,8 @@ navbar:
     #   href: about.html
     - text: "Research"
       href: research.html
-    # - text: "Private"
-    #   href: private.html
+    - text: "Teaching"
+      href: teaching.html
     - icon: fa-envelope
       href: mailto:t.nagamine@lancaster.ac.uk
 output:
